--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ button:hover {
 
 table {
   width: 90%;
-  height: 90%;
+  height: 60%;
   border-collapse: collapse;
   margin: 10px 20px 20px 20px;
   table-layout: fixed;
@@ -112,7 +112,7 @@ tr.border-bottom td {
   height: 100%;
   height: 100vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   position: absolute;
   top: 0;
   left: 0;
@@ -124,12 +124,11 @@ tr.border-bottom td {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 16%;
-  height: 100%;
+  width: 100%;
+  height: 1200px;
   background-color: white;
   position: relative;
   margin: 0px 10px 0px 0px;
-  border-radius: 0px 50px 50px 0px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -163,9 +162,9 @@ tr.border-bottom td {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  width: 28%;
-  height: 100%;
-  margin: 0px 10px;
+  width: 100%;
+  height: 1100px;
+  margin: 0px 0px;
 }
 
 .user-profile-wrapper2 {
@@ -177,7 +176,7 @@ tr.border-bottom td {
 }
 
 .user-profile-img {
-  margin-top: 20px;
+  margin-top: 0px;
   width: 100%;
 }
 
@@ -197,7 +196,7 @@ tr.border-bottom td {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .user-info:hover {
@@ -252,6 +251,7 @@ tr.border-bottom td {
   text-align: center;
   font-weight: 400;
   margin-left: 5px;
+  visibility: hidden;
 }
 /* SVG STYLES */
 
@@ -316,4 +316,35 @@ tr.border-bottom td {
 /* MEDIA QUERIES */
 
 @media only screen and (min-width: 768px) {
+  table {
+    height: 90%;
+  }
+
+  #nav-menu {
+    height: 100%;
+    width: 16%;
+    border-radius: 0px 50px 50px 0px;
+  }
+  #popular-profile-wrapper {
+    flex-direction: row;
+  }
+
+  .user-profile-wrapper,
+  .user-profile-wrapper2,
+  .user-profile-wrapper3 {
+    width: 28%;
+    margin: 0px 10px;
+  }
+
+  .user-info {
+    height: 70%;
+    margin-bottom: 20px;
+  }
+
+  .user-profile-img {
+    margin-top: 20px;
+  }
+  .go-back {
+    visibility: visible;
+  }
 }
